# cogniteam-haystack-distance-transform-coverage

./: Dockerfile  README.md  buildx_tutorial.sh  coverage.rviz  entrypoint.sh
Nimbus_Component/: local_nimbus.json  nimbusc.json
map_coverage/: CMakeLists.txt  main_tcp.cpp  package.xml
map_coverage/include/: AStar.h  AstarPathManager.h  DisantanceMapCoverage.h  DistanceTransformGoalCalculator.h  GoalCalculator.h  MapCoverageManager.h  TSP.h  logManger.h  params.h
map_coverage/launch/: coverage.launch  empty.launch  gmapping.launch  mapping.launch
map_coverage/src/: AStar.cpp  MoveBaseController.cpp  TSP.cpp  map_coverage_ros_node.cpp  one_drive_png.py  test.cpp  test_node.cpp
